# monte-carlo-particle-simulator

./: CMakeLists.txt  Makefile  README.md  bstack.w  common.w  csg.w  cuda.w  error.w  heap.w  history.w  main.w  matrix.w  mcs.cu  mcs.w  mem.w  overview.w  postfix.w  prepare.sh  removecomments.sed  sim.w  table.w  test_gpu_table.data  types.w  vector.w  world.w
cmake/: CMakeLists.txt  README
figures/: Makefile  figs.mp  figs.tex  genfigs.sh  mpstoeps.sh  neighbour.eps  neighbour.fig  nonuniform.eps  nonuniform.fig  subcuboids.eps  subcuboids.fig  subdivision.eps  subdivision.fig
papers/: upgpu2011.tex
test/: test_affine_merge.data  test_geometry_input.data
