PROJECT(MCS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE Debug)
SET(SOURCE_FILES
    mcs.c
)
MESSAGE( "SOURCE_FILES = " ${SOURCE_FILES} )

# FIND_PACKAGE(CUDA)
# SET(CUDA_SDK_ROOT_DIR /home/user/sdks/cuda)
# INCLUDE(FindCUDA)
# include_directories(${CUDA_TOOLKIT_INCLUDE})
# CUDA_ADD_EXECUTABLE(mcs ${SOURCE_FILES})

ADD_EXECUTABLE(mcs ${SOURCE_FILES})
