PROJECT(MCS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE Debug)
FIND_PACKAGE(CUDA)
SET(SOURCE_FILES
    mcs.c
)
MESSAGE( "SOURCE_FILES = " ${SOURCE_FILES} )

# Set CUDA SDK path
#SET(CUDA_SDK_ROOT_DIR /home/user/sdks/cuda)

INCLUDE(FindCUDA)
include_directories(${CUDA_TOOLKIT_INCLUDE})
CUDA_ADD_EXECUTABLE(mcs ${SOURCE_FILES})
